# kata_cpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  StringCalculator.cpp  StringCalculator.hpp
tests/: CMakeLists.txt  Test.cpp
